bundles/net.karpisek.gemdev.lang/src/net/karpisek/gemdev/lang/parser/GsParser.java
/*******************************************************************************
 * Copyright (c) 2008, 2018 Martin Karpisek.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *     Martin Karpisek - initial API and implementation
 *******************************************************************************/
// $ANTLR 3.1.1 D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g 2009-10-04 15:01:21

package net.karpisek.gemdev.lang.parser;
import java.util.LinkedList;
import java.util.List;

import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.DFA;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;

public class GsParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "UNARY_METHOD", "BINARY_METHOD", "KEYWORD_METHOD", "PRIMITIVE", "PARAMETERS", "TEMPORARIES", "STATEMENTS", "ARRAY", "BLOCK", "EXPR", "UNARY_MESSAGE", "BINARY_MESSAGE", "KEYWORD_MESSAGE", "PARAMETER", "BLOCK_PARAMETER", "KEYWORD", "INT_LITERAL", "FLOAT_LITERAL", "ID", "COLON", "LT", "GT", "BAR", "DOT", "RETURN", "ASSIGN", "NIL", "TRUE", "FALSE", "SELF", "SUPER", "THIS_CONTEXT", "MINUS", "CHARACTER_LITERAL", "STRING_LITERAL", "SYMBOL_LITERAL", "LPAREN", "RPAREN", "LBRACKET", "COMMA", "RBRACKET", "LBRACE", "RBRACE", "AMPERSAND", "BINARY_SELECTOR", "PLUS", "LETTERS", "DIGITS", "EXPONENT", "INT_OR_FLOAT", "BINARY_SELECTOR_CHAR", "COMMENT", "NEWLINE", "WS", "'primitive:'", "'protected'", "'unprotected'", "'#'", "';'"
	};
	public static final int EXPONENT=52;
	public static final int LT=24;
	public static final int BINARY_SELECTOR=48;
	public static final int T__62=62;
	public static final int PARAMETERS=8;
	public static final int DIGITS=51;
	public static final int LBRACE=45;
	public static final int UNARY_MESSAGE=14;
	public static final int KEYWORD_METHOD=6;
	public static final int T__61=61;
	public static final int ID=22;
	public static final int EOF=-1;
	public static final int T__60=60;
	public static final int PRIMITIVE=7;
	public static final int INT_OR_FLOAT=53;
	public static final int LPAREN=40;
	public static final int LBRACKET=42;
	public static final int RPAREN=41;
	public static final int T__58=58;
	public static final int BINARY_SELECTOR_CHAR=54;
	public static final int EXPR=13;
	public static final int UNARY_METHOD=4;
	public static final int STRING_LITERAL=38;
	public static final int SYMBOL_LITERAL=39;
	public static final int COMMA=43;
	public static final int T__59=59;
	public static final int PARAMETER=17;
	public static final int RETURN=28;
	public static final int BINARY_MESSAGE=15;
	public static final int PLUS=49;
	public static final int SUPER=34;
	public static final int RBRACKET=44;
	public static final int COMMENT=55;
	public static final int DOT=27;
	public static final int KEYWORD_MESSAGE=16;
	public static final int ARRAY=11;
	public static final int INT_LITERAL=20;
	public static final int KEYWORD=19;
	public static final int RBRACE=46;
	public static final int AMPERSAND=47;
	public static final int CHARACTER_LITERAL=37;
	public static final int LETTERS=50;
	public static final int MINUS=36;
	public static final int TRUE=31;
	public static final int TEMPORARIES=9;
	public static final int FLOAT_LITERAL=21;
	public static final int COLON=23;
	public static final int WS=57;
	public static final int NEWLINE=56;
	public static final int NIL=30;
	public static final int THIS_CONTEXT=35;
	public static final int BINARY_METHOD=5;
	public static final int BLOCK=12;
	public static final int ASSIGN=29;
	public static final int STATEMENTS=10;
	public static final int GT=25;
	public static final int FALSE=32;
	public static final int BLOCK_PARAMETER=18;
	public static final int SELF=33;
	public static final int BAR=26;

	// delegates
	// delegators


	public GsParser(final TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public GsParser(final TokenStream input, final RecognizerSharedState state) {
		super(input, state);

	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(final TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}

	@Override
	public String[] getTokenNames() { return GsParser.tokenNames; }
	@Override
	public String getGrammarFileName() { return "D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g"; }


	private final List<SyntaxError> errors = new LinkedList<SyntaxError>();
	@Override
	public void displayRecognitionError(final String[] tokenNames,
		final RecognitionException e)
	{
		final String hdr = getErrorHeader(e);
		final String msg = getErrorMessage(e, tokenNames);
		final Token t = e.token;
		int length = 1;
		if(t != null && t.getText() != null){
			length = t.getText().length();
		}

		errors.add(
			new SyntaxError(
				hdr+" "+msg,
				e.line,
				e.charPositionInLine,
				length
			)
		);
	}
	public List<SyntaxError> getSyntaxErrors(){
		return errors;
	}


	public static class method_return extends ParserRuleReturnScope {
		GsTree tree;
		@Override
		public Object getTree() { return tree; }
	};

	// $ANTLR start "method"
	// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:72:1: method : m= methodHeader b= methodBody -> ^( $m $b) ;
	public final GsParser.method_return method() throws RecognitionException {
		final GsParser.method_return retval = new GsParser.method_return();
		retval.start = input.LT(1);

		GsTree root_0 = null;

		GsParser.methodHeader_return m = null;

		GsParser.methodBody_return b = null;


		final RewriteRuleSubtreeStream stream_methodHeader=new RewriteRuleSubtreeStream(adaptor,"rule methodHeader");
		final RewriteRuleSubtreeStream stream_methodBody=new RewriteRuleSubtreeStream(adaptor,"rule methodBody");
		try {
			// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:72:7: (m= methodHeader b= methodBody -> ^( $m $b) )
			// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:72:9: m= methodHeader b= methodBody
			{
				pushFollow(FOLLOW_methodHeader_in_method180);
				m=methodHeader();

				state._fsp--;
				if (state.failed) {
					return retval;
				}
				if ( state.backtracking==0 ) {
					stream_methodHeader.add(m.getTree());
				}
				pushFollow(FOLLOW_methodBody_in_method184);
				b=methodBody();

				state._fsp--;
				if (state.failed) {
					return retval;
				}
				if ( state.backtracking==0 ) {
					stream_methodBody.add(b.getTree());
				}


				// AST REWRITE
				// elements: m, b
				// token labels:
				// rule labels: retval, b, m
				// token list labels:
				// rule list labels:
				if ( state.backtracking==0 ) {
					retval.tree = root_0;
					final RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);
					final RewriteRuleSubtreeStream stream_b=new RewriteRuleSubtreeStream(adaptor,"token b",b!=null?b.tree:null);
					final RewriteRuleSubtreeStream stream_m=new RewriteRuleSubtreeStream(adaptor,"token m",m!=null?m.tree:null);

					root_0 = (GsTree)adaptor.nil();
					// 72:43: -> ^( $m $b)
					{
						// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:72:46: ^( $m $b)
						{
							GsTree root_1 = (GsTree)adaptor.nil();
							root_1 = (GsTree)adaptor.becomeRoot(stream_m.nextNode(), root_1);

							adaptor.addChild(root_1, stream_b.nextTree());

							adaptor.addChild(root_0, root_1);
						}

					}

					retval.tree = root_0;}
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {

				retval.tree = (GsTree)adaptor.rulePostProcessing(root_0);
				adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (GsTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

		}
		finally {
		}
		return retval;
	}
	// $ANTLR end "method"

	public static class methodHeader_return extends ParserRuleReturnScope {
		GsTree tree;
		@Override
		public Object getTree() { return tree; }
	};

	// $ANTLR start "methodHeader"
	// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:74:1: methodHeader : ( unaryMethodHeader -> ^( UNARY_METHOD ^( PARAMETERS unaryMethodHeader ) ) | binaryMethodHeader -> ^( BINARY_METHOD ^( PARAMETERS binaryMethodHeader ) ) | keywordMethodHeader -> ^( KEYWORD_METHOD ^( PARAMETERS keywordMethodHeader ) ) );
	public final GsParser.methodHeader_return methodHeader() throws RecognitionException {
		final GsParser.methodHeader_return retval = new GsParser.methodHeader_return();
		retval.start = input.LT(1);

		GsTree root_0 = null;

		GsParser.unaryMethodHeader_return unaryMethodHeader1 = null;

		GsParser.binaryMethodHeader_return binaryMethodHeader2 = null;

		GsParser.keywordMethodHeader_return keywordMethodHeader3 = null;


		final RewriteRuleSubtreeStream stream_keywordMethodHeader=new RewriteRuleSubtreeStream(adaptor,"rule keywordMethodHeader");
		final RewriteRuleSubtreeStream stream_unaryMethodHeader=new RewriteRuleSubtreeStream(adaptor,"rule unaryMethodHeader");
		final RewriteRuleSubtreeStream stream_binaryMethodHeader=new RewriteRuleSubtreeStream(adaptor,"rule binaryMethodHeader");
		try {
			// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:75:3: ( unaryMethodHeader -> ^( UNARY_METHOD ^( PARAMETERS unaryMethodHeader ) ) | binaryMethodHeader -> ^( BINARY_METHOD ^( PARAMETERS binaryMethodHeader ) ) | keywordMethodHeader -> ^( KEYWORD_METHOD ^( PARAMETERS keywordMethodHeader ) ) )
			int alt1=3;
			final int LA1_0 = input.LA(1);

			if ( (LA1_0==ID) ) {
				final int LA1_1 = input.LA(2);

				if ( (LA1_1==COLON) ) {
					alt1=3;
				}
				else if ( (LA1_1==EOF||(LA1_1>=INT_LITERAL && LA1_1<=ID)||LA1_1==LT||LA1_1==BAR||LA1_1==RETURN||(LA1_1>=NIL && LA1_1<=LPAREN)||LA1_1==LBRACKET||LA1_1==LBRACE||LA1_1==61) ) {
					alt1=1;
				}
				else {
					if (state.backtracking>0) {state.failed=true; return retval;}
					final NoViableAltException nvae =
						new NoViableAltException("", 1, 1, input);

					throw nvae;
				}
			}
			else if ( ((LA1_0>=LT && LA1_0<=BAR)||LA1_0==MINUS||LA1_0==COMMA||(LA1_0>=AMPERSAND && LA1_0<=PLUS)) ) {
				alt1=2;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				final NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);

				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:75:5: unaryMethodHeader
				{
					pushFollow(FOLLOW_unaryMethodHeader_in_methodHeader211);
					unaryMethodHeader1=unaryMethodHeader();

					state._fsp--;
					if (state.failed) {
						return retval;
					}
					if ( state.backtracking==0 ) {
						stream_unaryMethodHeader.add(unaryMethodHeader1.getTree());
					}


					// AST REWRITE
					// elements: unaryMethodHeader
					// token labels:
					// rule labels: retval
					// token list labels:
					// rule list labels:
					if ( state.backtracking==0 ) {
						retval.tree = root_0;
						final RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

						root_0 = (GsTree)adaptor.nil();
						// 75:43: -> ^( UNARY_METHOD ^( PARAMETERS unaryMethodHeader ) )
						{
							// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:75:46: ^( UNARY_METHOD ^( PARAMETERS unaryMethodHeader ) )
							{
								GsTree root_1 = (GsTree)adaptor.nil();
								root_1 = (GsTree)adaptor.becomeRoot(adaptor.create(UNARY_METHOD, "UNARY_METHOD"), root_1);

								// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:75:61: ^( PARAMETERS unaryMethodHeader )
								{
									GsTree root_2 = (GsTree)adaptor.nil();
									root_2 = (GsTree)adaptor.becomeRoot(adaptor.create(PARAMETERS, "PARAMETERS"), root_2);

									adaptor.addChild(root_2, stream_unaryMethodHeader.nextTree());

									adaptor.addChild(root_1, root_2);
								}

								adaptor.addChild(root_0, root_1);
							}

						}

						retval.tree = root_0;}
				}
				break;
				case 2 :
					// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:76:5: binaryMethodHeader
				{
					pushFollow(FOLLOW_binaryMethodHeader_in_methodHeader249);
					binaryMethodHeader2=binaryMethodHeader();

					state._fsp--;
					if (state.failed) {
						return retval;
					}
					if ( state.backtracking==0 ) {
						stream_binaryMethodHeader.add(binaryMethodHeader2.getTree());
					}


					// AST REWRITE
					// elements: binaryMethodHeader
					// token labels:
					// rule labels: retval
					// token list labels:
					// rule list labels:
					if ( state.backtracking==0 ) {
						retval.tree = root_0;
						final RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

						root_0 = (GsTree)adaptor.nil();
						// 76:43: -> ^( BINARY_METHOD ^( PARAMETERS binaryMethodHeader ) )
						{
							// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:76:46: ^( BINARY_METHOD ^( PARAMETERS binaryMethodHeader ) )
							{
								GsTree root_1 = (GsTree)adaptor.nil();
								root_1 = (GsTree)adaptor.becomeRoot(adaptor.create(BINARY_METHOD, "BINARY_METHOD"), root_1);

								// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:76:62: ^( PARAMETERS binaryMethodHeader )
								{
									GsTree root_2 = (GsTree)adaptor.nil();
									root_2 = (GsTree)adaptor.becomeRoot(adaptor.create(PARAMETERS, "PARAMETERS"), root_2);

									adaptor.addChild(root_2, stream_binaryMethodHeader.nextTree());

									adaptor.addChild(root_1, root_2);
								}

								adaptor.addChild(root_0, root_1);
							}

						}

						retval.tree = root_0;}
				}
				break;
				case 3 :
					// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:77:5: keywordMethodHeader
				{
					pushFollow(FOLLOW_keywordMethodHeader_in_methodHeader286);
					keywordMethodHeader3=keywordMethodHeader();

					state._fsp--;
					if (state.failed) {
						return retval;
					}
					if ( state.backtracking==0 ) {
						stream_keywordMethodHeader.add(keywordMethodHeader3.getTree());
					}


					// AST REWRITE
					// elements: keywordMethodHeader
					// token labels:
					// rule labels: retval
					// token list labels:
					// rule list labels:
					if ( state.backtracking==0 ) {
						retval.tree = root_0;
						final RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

						root_0 = (GsTree)adaptor.nil();
						// 77:43: -> ^( KEYWORD_METHOD ^( PARAMETERS keywordMethodHeader ) )
						{
							// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:77:46: ^( KEYWORD_METHOD ^( PARAMETERS keywordMethodHeader ) )
							{
								GsTree root_1 = (GsTree)adaptor.nil();
								root_1 = (GsTree)adaptor.becomeRoot(adaptor.create(KEYWORD_METHOD, "KEYWORD_METHOD"), root_1);

								// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:77:63: ^( PARAMETERS keywordMethodHeader )
								{
									GsTree root_2 = (GsTree)adaptor.nil();
									root_2 = (GsTree)adaptor.becomeRoot(adaptor.create(PARAMETERS, "PARAMETERS"), root_2);

									adaptor.addChild(root_2, stream_keywordMethodHeader.nextTree());

									adaptor.addChild(root_1, root_2);
								}

								adaptor.addChild(root_0, root_1);
							}

						}

						retval.tree = root_0;}
				}
				break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {

				retval.tree = (GsTree)adaptor.rulePostProcessing(root_0);
				adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (GsTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

		}
		finally {
		}
		return retval;
	}
	// $ANTLR end "methodHeader"

	public static class unaryMethodHeader_return extends ParserRuleReturnScope {
		GsTree tree;
		@Override
		public Object getTree() { return tree; }
	};

	// $ANTLR start "unaryMethodHeader"
	// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:79:1: unaryMethodHeader : ID ;
	public final GsParser.unaryMethodHeader_return unaryMethodHeader() throws RecognitionException {
		final GsParser.unaryMethodHeader_return retval = new GsParser.unaryMethodHeader_return();
		retval.start = input.LT(1);

		GsTree root_0 = null;

		Token ID4=null;

		GsTree ID4_tree=null;

		try {
			// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:79:18: ( ID )
			// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:79:20: ID
			{
				root_0 = (GsTree)adaptor.nil();

				ID4=(Token)match(input,ID,FOLLOW_ID_in_unaryMethodHeader332); if (state.failed) {
					return retval;
				}
				if ( state.backtracking==0 ) {
					ID4_tree = (GsTree)adaptor.create(ID4);
					adaptor.addChild(root_0, ID4_tree);
				}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {

				retval.tree = (GsTree)adaptor.rulePostProcessing(root_0);
				adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (GsTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

		}
		finally {
		}
		return retval;
	}
	// $ANTLR end "unaryMethodHeader"

	public static class binaryMethodHeader_return extends ParserRuleReturnScope {
		GsTree tree;
		@Override
		public Object getTree() { return tree; }
	};

	// $ANTLR start "binaryMethodHeader"
	// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:80:1: binaryMethodHeader : binarySelector ID ;
	public final GsParser.binaryMethodHeader_return binaryMethodHeader() throws RecognitionException {
		final GsParser.binaryMethodHeader_return retval = new GsParser.binaryMethodHeader_return();
		retval.start = input.LT(1);

		GsTree root_0 = null;

		Token ID6=null;
		GsParser.binarySelector_return binarySelector5 = null;


		GsTree ID6_tree=null;

		try {
			// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:80:19: ( binarySelector ID )
			// D:\\Dev\\eclipseWorkspaces\\gemdev\\net.karpisek.gemdev.lang\\grammar\\Gs.g:80:21: binarySelector ID
			{
				root_0 = (GsTree)adaptor.nil();

				pushFollow(FOLLOW_binarySelector_in_binaryMethodHeader338);
				binarySelector5=binarySelector();

				state._fsp--;
				if (state.failed) {
					return retval;
				}
				if ( state.backtracking==0 ) {
					adaptor.addChild(root_0, binarySelector5.getTree());
				}
				ID6=(Token)match(input,ID,FOLLOW_ID_in_binaryMethodHeader340); if (state.failed) {
					return retval;
				}
				if ( state.backtracking==0 ) {
					ID6_tree = (GsTree)adaptor.create(ID6);
					adaptor.addChild(root_0, ID6_tree);
				}
				if ( state.backtracking==0 ) {
					ID6.setType(PARAMETER);
				}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {

				retval.tree = (GsTree)adaptor.rulePostProcessing(root_0);
				adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (final RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (GsTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

		}
		finally {
		}
		return retval;
	}
	// $ANTLR end "binaryMethodHeader"

	public static class keywordMethodHeader_return extends ParserRuleReturnScope {
		GsTree tree;
		@Override
		public Object getTree() { return tree; }
	};

